--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: https://example.com
+baseurl: https://TritiumQ.github.io.git/MyBlogPages
 languageCode: en-us
 theme: hugo-theme-stack
 paginate: 5
